@startuml

package Core {
    class AssetManager {
        +static AssetManager& getInstance()

        +Texture* createTexture(string path, string name, SDL_Renderer*)
        +Mix_Chunk* createSound(string path, string name)
        +void registerTexture(Texture* texture, string name)
        +void registerSound(Mix_Chunk* sound, string name)
        +Texture* getTexture(string name)
        +Mix_Chunk* getSound(string name)
        
        -unordered_map<string, Texture*> textures
        -unordered_map<string, Mix_Chunk*> sounds

        -static AssetManager* instance
    }

    class Sound {
        +bool loops()
        +int loopCount()
        +Mix_Chunk* getChunkData()
        +const Vector2D getPosition()
        +void setChannel(int)
        +int getChannel()


        -int channel
        -Vector2D* parentPosition
        -bool doesLoop
        -int numLoops
        -Mix_Chunk* chunk
    }

    class SoundMixer {
        +void init()
        +static SoundMixer& getInstance()
        +void updateSound()
        +int playSound(Sound* sound, int channel)
        +void pauseChannel(int channel)
        +void pauseAllChannels()
        +void resumeChannel(int channel)
        +void resumeAllChannels()

        -static SoundMixer* instance
        -void channel_finished(int channel)
        -int maxChannels
        -vector<Sound*> playingSounds
    }

    class Game {
        +void init()
        +void run()
        +static SDL_Renderer* getSDLRenderer()
        +static SceneHandler& getRenderer()
        +static InputHandler& getInputHandler()
        +static AssetManager& getAssetManager()
        +static SoundMixer& getSoundMixer()
        +void sendInputEvents()
        +void registerInputs()
        +void destroy()

        -SDL_Window* window
        -SDL_Surface* screenSurface
        -bool running
    }

    abstract class AABBCollider {
        +bool colliding((AABBCollider)
        +vector<AABBCollider*> getColliders
        +void addCollider(AABBCollider*)
        +void clearColliders()
        +double getInterArea(AABBCollider)
        +Vector2D getProjectionVector(AABBCollider)
        +Vector2D* getPos()
        +bool isTrigger()
        +void setTrigger(bool)
        +void handleCollisions()
        +void handleTrigger(string)
        +void updateAABB()
        
        #vector<AABBCollider*> colliders
        #Vector2D position
        #int halfWidth
        #int halfHeight
        #bool trigger
    }

    class InputHandler {
        +static InputHandler& getInstance()
        
        +void handleInput()
        +void addKeyAction(int, string)
        +void removeKeyAction(int)
        +bool actionTriggered(string)
        +bool actionHeld(string)
        +bool keyHeld(int)
        +bool keyPressed(int)
        +bool keyReleased(int)

        +vector<int> getPressedKeys()
        +vector<int> getHeldKeys()
        +vector<int> getReleasedKeys()
    
        -SDL_Event event
        -static InputHandler* instance
        -map<int, bool> pressedKeys
        -map<int, bool> heldKeys
        -map<int, bool> releasedKeys
        -map<int, string> keyMap
        -map<string, int> actionMap
    }

    class SceneHandler {
        static SceneHandler& getInstance()

        +void changeScene(Scene*)
        +void changeScene(string)
        +void registerScene(Scene*)
        +void removeScene(string)
        +Scene* getCurrentScene()

        -static SceneHandler* instance
        -Scene* currentScene
        -map<string, Scene*> registeredScenes
        
    }

    class Renderer {
        +static Renderer& getInstance()
        
        +void init(SDL_Window*, int)
        +void destroy()
        +void createFromWindow(SDL_Window*, int)
        +void drawTexture(Texture*, int, int, int, int)
        +void drawTexture(Texture*, SDL_Rect*)
        +void drawTexture(Texture*, SDL_Rect*, SDL_Rect*, double, SDL_Point, SDL_RendererFlip)
        +SDL_Renderer* getRenderer()

        -static Renderer* instance
        -SDL_Renderer* sdlRenderer
    }

    class Texture {
        +SDL_Texture* getSDLTexture()
        +int getWidth()
        +int getHeight()

        -int width
        -int height
        -SDL_Texture* sdlTexture
    }

    class EventHandler {
        +int addListener(int, Callback)
        +void removeListner(int)
        +void dispatchEVent(Event*)

        -int lastID
        -vector<Listener> listeners
    }

    class Event {
        +int getType()
        
        #string action
        #int type
    }

    class KeyboardEvent {
        +int keyID
    }

    abstract class Renderable {
        +void createFromPath(string, SDL_Renderer)
        +void setSprite(Texture*)
        +void setRenderId(int)
        +int getRenderId(int)
        +Texture* getTexture()
        +SDL_Texture* getSDLTexture()
        +SDL_Rect* getRenderRect()
        +void render(SDL_Rect*)

        #int renderId
        #Texture* image
    }

    class Animation {
        +int getFrameCount()
        +string getName()
        +SDL_Rect* getFrame(int)
        +SDL_Rect* getCurrentFrame()
        +void update()
        +int getFraemDelay()
        +bool parseFile(string, SDL_Renderer*)

        -bool incrememting
        -SDL_Rect* frameList
        -int startTick
        -int currentTick
        -int frameDelay
        -string title
        -bool loopable
        -bool cycles
        -int frameCount
        -int currentFrame
    }
    class AnimatedSprite {
        +void render(SDL_Rect*)
        +void registerAnimation(Animation)
        +void setAnimation(string)
        +void removeAnimation(string)

        -string currentAnimation
        -map<string, Animation> animations
    }

    class Entity {
        +void update()
        +void setID(int)
        +void setName(string)
        +int getID()
        +static int getNextValidID()
        +string getName()

        -int x
        -int y
        -int id
        -string name
        -static int nextValidID
    }

    class Scene {
        +void registerEntity(Entity*)
        +void deleteEntity(int)
        +void udpateScene()
        +void renderScene()
        +void checkCollisions()
        +void checkCollisions(AABBCollider*)
        +void setName(string)
        +void setSceneWidth(int)
        +void setSceneHeight(int)
        +void setCamera(Camera*)
        +void setTiledMap(TiledMap*)
        +Entity* getEntity(int)
        +string getSceneName()
        +TiledMap* getTiledMap()
        +void destroy()
        +int getSceneWidth()
        +int getSceneHeight()

        -string sceneName
        -SDL_Rect worldSpace
        -Camera* camera
        -TiledMap* tiledMap
        -int sceneWidth
        -int sceneHeight
        -map<int, Renderable*> renderMap
        -map<int, Entity*> entityMap
        -map<int, AABBCollider*> colliders
        -map<int AABBCollider*> triggers
        -vector<int> deletedEntities
        -void removeEntity(int)
    }
}

package util {
    class Vector2D {
        +double dot(Vector2D)
        +Vector2D normal()
        +Vector2D normalize()
        +double magnitude()
        +Vector2D project(Vector2D)
        +double x
        +double y
    }
    
    class TiledParser {
        +static bool parse(string, string, Scene*)
        -static void parseObjects(XMLElement*, Scene*)
        -static void createBoundsBlock(TiledMap*, Scene*)
        -static Tileset* parseTileset(XMLElement*)
    }
    
    class Tile {
        +int getID()
        +string getType()
        +int frameCount()
        
        -int id
        -string type
        -vector<Property> properties
        -vector<Frame> frames
    }
    
    class Tileset {
        +void setStartGID(int)
        +string getName()
        +string getPath()
        +Tile getTile(int)
        +int getTileWidth()
        +int getTileHeight()
        +int getTileCount()
        +int getColumnCount()
        +Texture* getImage()
        
        -int firstGID
        -string path
        -string name
        -int columns
        -int tileCount
        -int tileWidth
        -int tileHeight
        -int spacing
        -int margin
        -map<int, Tile> tiles
        -Texture* image
    }
}

package Entities {

    class Patroller {
        +void handleXCollisions(const vector<AABBCollider*>&)
        +void handleYCollisions(const vector<AABBCollider*>&)
        +void handleCollisions(AABBCollider*)
        +void update()
        +void render(SDL_Rect*)

        -Vector2D startPosition
    }

    class PlayerSpawner {
        +void update()
        +void spawnPlayer(Event*)
        -Player* player
        -Camera* camera
    }

    class Coin {
        +void update()
        +void render(SDL_Rect*)
        +void handleColliions(AABBCollider*)
    }

    class BreakableBox {
        +void update()
        +void handleColliions(AABBCollider*)
        +void Render(SDL_Rect*)
        +void setContains(Entity*)

        -Sound* sound
        -Entity* contains
    }

    class Camera {
        +void update()
        +void setX(int)
        +void setY(int)
        +void setWidth(int)
        +void setHeight(int)
        +void setSceneWidth(int)
        +void setSceneHeight(int)
        +void setCameraRect(SDL_Rect*)
        +void setParentPos(Vector2D*)
        +SDL_Rect* getCameraRect()
        +Vector2D getParentPos()
    
        -int sceneWidth
        -int sceneHeight
        -Vector2D* parentPos
        -SDL_Rect* cameraViewport
    }
    
    class Box {
        +void update()
        +void handleInput()
        +void render(SDL_Rect*)
        +void handleCollisions()
        +void updateAABB()
        +bool visibility()
        +void setVisible(bool)

        -Texture* texture
        -bool visible
    }
    
    class Player {
        +void update()
        +void handleInput(Event*)
        +void handleCollisions()
        +void handleTrigger(string)
        +void render(SDL_Rect*)
        +void setPosition(int, int)
        +void fireBullet(int)

        -bool canJump 
        -bool grounded
        -Vector2D velocity
        -bool facingLeft
    }

    class Projectile {
        +void udpate()
        +void handleCollisions()
        +void render(SDL_Rect*)
        
        -Vector2D velocity
    }

    class TiledMap {
        +int[] getLayer(int index)
        +int numLayers()
        +void insertLayer(int)
        +void drawLayer(int, int, int)
        +void update()
        +void render(SDL_Rect*)
        +void addTileSheet(Tileset*)
        +int getWidth()
        +int getHeight()

        -int width
        -int height
        -int tileWidth
        -int tileHeight
        -int[][] layers
        -Tileset* tilesets
    }
}

Renderable <|-- AnimatedSprite
AnimatedSprite o-- Animation

InputHandler "1" <--  Game
Game --> "1" SceneHandler
Renderer "1" <- Game
SoundMixer "1" <--Game
Game -> "1" AssetManager

Renderer --> Renderable

Renderable --> Texture

SceneHandler o-- Scene

EventHandler <|- Scene

EventHandler --> Event

Event <|.. KeyboardEvent
Scene o-- Entity
Scene o-- Renderable
Scene o-- AABBCollider

Tileset o-- Tile
TiledParser --> Tileset

TiledMap --> TiledParser

Entity <|-- Player
Entity <|-- Projectile
Entity <|-- TiledMap
Entity <|-- Box
Entity <|-- Camera
Entity <|-- BreakableBox
Entity <|-- PlayerSpawner
Entity <|-- Coin
Entity <|-- Patroller

AABBCollider <|-- Patroller
AABBCollider <|-- Coin
AABBCollider <|-- Player
AABBCollider <|-- Projectile
AABBCollider <|-- Box
AABBCollider <|-- BreakableBox

AnimatedSprite <|-- Player
Renderable <|-- Box
Renderable <|-- Projectile
Renderable <|-- TiledMap
Renderable <|-- BreakableBox
Renderable <|-- Coin
Renderable <|-- Patroller

AABBCollider --> Vector2D

AssetManager o-- Texture
Mix_Chunk -o AssetManager

Sound -> Mix_Chunk
SoundMixer o-- Sound

@enduml
